[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/materials/dirt_disp_4k.png" type="Texture" id=1]
[ext_resource path="res://components/PrettyButton.gd" type="Script" id=2]
[ext_resource path="res://scenes/menu/endless_difficulty_select/EndlessDifficultySelect.gd" type="Script" id=3]

[node name="EndlessDifficultySelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.945098, 0.266667, 0.266667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 0 )

[node name="DifficultyContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 515.0
margin_top = 213.0
margin_right = 765.0
margin_bottom = 507.0
custom_constants/separation = 12

[node name="EasyButton" type="Control" parent="CenterContainer/DifficultyContainer"]
unique_name_in_owner = true
margin_right = 250.0
margin_bottom = 90.0
rect_min_size = Vector2( 250, 90 )
theme_type_variation = "WinScreenButton"
script = ExtResource( 2 )
text = "Easy"

[node name="MediumButton" type="Control" parent="CenterContainer/DifficultyContainer"]
unique_name_in_owner = true
margin_top = 102.0
margin_right = 250.0
margin_bottom = 192.0
rect_min_size = Vector2( 250, 90 )
theme_type_variation = "WinScreenButton"
script = ExtResource( 2 )
text = "Medium"

[node name="HardButton" type="Control" parent="CenterContainer/DifficultyContainer"]
unique_name_in_owner = true
margin_top = 204.0
margin_right = 250.0
margin_bottom = 294.0
rect_min_size = Vector2( 250, 90 )
theme_type_variation = "WinScreenButton"
script = ExtResource( 2 )
text = "Hard"

[node name="BackButton" type="Control" parent="."]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 66 )
theme_type_variation = "BackButton"
script = ExtResource( 2 )
direction = Vector2( -1, 0 )
text = "Back"
icon_size = 32
icon_name = "arrow-left"
